# json2dot

./: Makefile  Pipfile  README.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yaml  ci.yml  dependabot.yml
json2dot/: __init__.py  build.py  cli.py  command.py  dot.py  mathx.py  ranking.py  row.py  scale.py  stat.py
tests/: __init__.py  debug.json  debug_group.json  debug_name_another.json  test.json  test_json2dot.py  test_mathx.py  test_ranking.py  test_row.py  test_stat.py
