[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "json2dot"
description = "Generate dot source from jsonl considering node degrees and edge weights."

readme = "README.md"
version = "0.1.1"
requires-python = ">=3.12"
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Intended Audience :: Developers"
]
keywords = ["json2dot"]
dependencies = [
 "graphviz>=0.20.1",
]

[project.urls]
repository = "https://github.com/berquerant/json2dot"

[tool.setuptools.packages.find]
exclude = ["build", "tests"]

[project.scripts]
json2dot = "json2dot.cli:main"

[tool.ruff]
select = [
  "F", # pyflakes
  "I", # isort
  "E", # pydocstyle
  "D",
  "W",
]
ignore = [
  "D100",
  "D101",
  "D102",
  "D107",
  "D203",
  "D212",
]
exclude = [
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".mypy_cache",
  ".pytype",
  ".ruff_cache",
  ".tox",
  "__pypackages__",
  "_build",
  "build",
  "dist",
  ".ropeproject",
  ".pytest_cache",
  "__pycache__",
  ".coverage",
]
line-length = 120
target-version = "py312"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"**/{tests,doc}/*" = ["D"]

[tool.mypy]
ignore_missing_imports = true
show_error_context = true
show_column_numbers = true
pretty = true

[tool.black]
line-length = 120
target-version = ["py312"]
