[project]
name = "json2dot"
version = "0.5.0"
description = "Generate dot source from jsonl considering node degrees and edge weights."
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["json2dot"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
]
dependencies = ["graphviz>=0.20.1"]

[project.urls]
repository = "https://github.com/berquerant/json2dot"

[project.scripts]
json2dot = "json2dot.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "setuptools",
]

[tool.uv]
package = true
dev-dependencies = [
    "setuptools>=80.3.0",
]

[tool.setuptools.packages.find]
exclude = ["build", "tests"]

[tool.ruff]
select = [
  "F", # pyflakes
  "I", # isort
  "E", # pydocstyle
  "D",
  "W",
]
ignore = [
  "D100",
  "D101",
  "D102",
  "D107",
  "D203",
  "D212",
]
exclude = [
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".mypy_cache",
  ".pytype",
  ".ruff_cache",
  ".tox",
  "__pypackages__",
  "_build",
  "build",
  "dist",
  ".ropeproject",
  ".pytest_cache",
  "__pycache__",
  ".coverage",
]
line-length = 120
target-version = "py312"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"**/{tests,doc}/*" = ["D"]

[tool.mypy]
ignore_missing_imports = true
show_error_context = true
show_column_numbers = true
pretty = true

[tool.black]
line-length = 120
target-version = ["py312"]
